--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="channel_name">C196 Cannel</string>
+    <string name="channel_name">C196 Channel</string>
     <string name="channel_description">Notifications for C196 App</string>
     <string-array name="type_options">
         <item>In Progress</item>
